--- a/CST438-project/CST439-project/src/app/components/map/map.component.html
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.html
@@ -1,4 +1,6 @@
 <div id="map">
-	<span>Map</span>
+	<agm-map [latitude]="lat" [longitude]="lng">
+  		<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+	</agm-map>	
 	
 </div>
