--- a/CST438-project/CST439-project/src/app/components/map/map.component.css
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.css
@@ -1,10 +1,20 @@
-#map {
-	width: 60%;
+#mapContainer {
+	width: 100%;
 	height:75%;
-	background-color: grey;
+	background-color: #f4f5f7;
 	position: absolute;
-	right: 0px;
+	left: 0px;
 	top: 70px;
+	
+}
+
+#menu {
+	width: 40%;
+	height: 100%;
+	position:absolute;
+	left: 0px;
+	border: 1px solid black;
+	background-color: #e8e5e5;
 }
 
 #text {
@@ -15,6 +25,15 @@
 	font-size: 40px;
 }
 
+#map {
+	width: 60%;
+	height: 100%;
+	position: absolute;
+	right: 0px;
+}
+
 agm-map {
+  
   height: 100%;
+  
 }
