--- a/CST438-project/CST439-project/src/app/components/map/map.component.html
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.html
@@ -8,7 +8,13 @@
 	</div>
 
 	<div id="map">
-		<agm-map [latitude]="lat" [longitude]="lng">
+		<agm-map  
+				  [mapTypeId]="map.mapTypeId" 
+				  [latitude]="map.center.lat" 
+				  [longitude]="map.center.lng" 
+				  [zoom]="map.zoom"
+				  (mapClick)="click($event)"
+				  [styles]="map.styles" >
   			<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
 		</agm-map>
 	</div>
