implemented search feature on map to move map to a location given by the user. Implemented geolocation to set maps initial location to the users location.

--- a/CST438-project/CST439-project/src/app/components/map/map.component.css
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.css
@@ -8,6 +8,19 @@
 	
 }
 
+#searchContainer {
+	margin-top: 10px;
+	width: 100%;
+	position: absolute;
+	left: 0px;
+	
+}
+
+#locationInput {
+	width: 75%
+	
+}
+
 #menu {
 	width: 40%;
 	height: 100%;
