changed place type of autocomplete to search for geocodes and establlishments

--- a/CST438-project/CST439-project/src/app/components/map/map.component.html
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.html
@@ -19,7 +19,7 @@
 				  [mapTypeId]="map.mapTypeId" 
 				  [latitude]="lat" 
 				  [longitude]="lng" 
-				  [zoom]="map.zoom"
+				  [zoom]="zoom"
 				  (mapClick)="click($event)"
 				  [styles]="map.styles" >
   			<agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
