--- a/CST438-project/CST439-project/src/app/components/app-bar/app-bar.component.css
+++ b/CST438-project/CST439-project/src/app/components/app-bar/app-bar.component.css
@@ -1,5 +1,5 @@
 #appBar {
-	background-color: lightblue;
+	background-color: grey;
 	width: 100%;
 	height: 75px;
 	position: absolute;
@@ -12,5 +12,28 @@
 	margin-top:25px;
 	position: absolute;
 	left: 0px;
-	font-size: 40px;
+	font-size: 4vw;
 }
+
+#title:hover {
+	cursor: pointer;
+}
+
+#loginButtons {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+}
+
+.lbuttons {
+	width: 70px;
+	margin-right: 5px;
+	height: 30px;
+	background-color: lightblue;
+}
+
+.lbuttons:hover {
+	cursor: pointer;
+	background-color: #ffc14f;
+}
+
