--- a/CST438-project/CST439-project/src/app/components/app/app.component.html
+++ b/CST438-project/CST439-project/src/app/components/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <app-app-bar></app-app-bar>
-  <app-map></app-map>
+  <router-outlet></router-outlet>
   <app-chat></app-chat>
 </div>
 
