implemented login authententication with firebase

--- a/CST438-project/CST439-project/src/app/components/app-bar/app-bar.component.html
+++ b/CST438-project/CST439-project/src/app/components/app-bar/app-bar.component.html
@@ -4,7 +4,7 @@
 	<div id="loginButtons">
 		<button class="lbuttons" 
 				id="login"
-				(click)="navigateTo('login')">Login</button>
+				(click)="navigateTo('login')">{{isLoggedIn}}</button>
 		<button class="lbuttons" 
 				id="register"
 				(click)="navigateTo('register')">Register</button>
