--- a/CST438-project/CST439-project/src/app/components/map/map.component.html
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.html
@@ -10,6 +10,9 @@
 			   class="form-control"
 			   #search [formControl]="searchControl"
 			   >
+		<nav>
+			<a href="">test1</a>
+		</nav>
 		</div>
 		
 	</div>
