added 'join' button to each event marker which calls database and adds the user to the clicked event

--- a/CST438-project/CST439-project/src/app/components/map/map.component.html
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.html
@@ -64,7 +64,7 @@
   					<br />
   					<span>Time: {{marker.date}}</span>
   					<br />
-  					<button>Join</button>
+  					<button (click)="mapService.addUserToEvent(marker.id)">Join</button>
   			    </agm-info-window>
   			</agm-marker>
   			</div>
