created custom marker icons for each type of activity

--- a/CST438-project/CST439-project/src/app/components/map/map.component.html
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.html
@@ -59,6 +59,7 @@
   				[latitude]= "marker.coords.lat"
   				[longitude]="marker.coords.lng"
   				[visible]="true"
+  				[iconUrl]="marker.icon"
   				 >
   				<agm-info-window [isOpen]="true"
   			    >
