made a location details component that shows info on a location when clicked

--- a/CST438-project/CST439-project/src/app/components/map/map.component.html
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.html
@@ -60,8 +60,9 @@
   				[longitude]="marker.coords.lng"
   				[visible]="true"
   				[iconUrl]="marker.icon"
+  				(markerClick)="markerClicked(marker.id)"
   				 >
-  				<agm-info-window [isOpen]="true"
+  				<agm-info-window [isOpen]="marker.isOpen"
   			    >
   			    	<span>Location: {{marker.name}}</span>
   					<br />
