created basic layout of teams page

--- a/CST438-project/CST439-project/src/app/components/location-details/location-details.component.html
+++ b/CST438-project/CST439-project/src/app/components/location-details/location-details.component.html
@@ -16,5 +16,7 @@
 			{{player.displayName}}
 		</li>
 	</ol>
+	<br />
+	<button  (click)="mapService.addUserToEvent(id)">Join Game</button>
 	</div>
 </div>
