--- a/CST438-project/CST439-project/src/app/components/map/map.component.html
+++ b/CST438-project/CST439-project/src/app/components/map/map.component.html
@@ -9,6 +9,9 @@
 			<li>
 				<a (click)="navigate('map/locations')"> +</a>
 			</li>
+			<li>
+				<a (click)="navigate('teams')">Teams</a>
+			</li>
 		</ul>
 		
 		<div id="searchContainer">
