--- a/CST438-project/CST439-project/src/app/components/teams-home/teams-home.component.html
+++ b/CST438-project/CST439-project/src/app/components/teams-home/teams-home.component.html
@@ -8,7 +8,7 @@
 			<a (click)="navigate('teams')">Teams Home</a>
 		</li>
 		<li>
-			<a> Your Teams</a>
+			<a (click)="navigate('teams/your-teams')"> Your Teams</a>
 		</li>
 		<li>
 			<a (click)="navigate('teams/create')">+</a>
