--- a/CST438-project/CST439-project/src/app/components/teams-home/teams-home.component.html
+++ b/CST438-project/CST439-project/src/app/components/teams-home/teams-home.component.html
@@ -13,8 +13,11 @@
 		<li>
 			<a (click)="navigate('teams/create')">+</a>
 		</li>
+		<li>
+			<a (click)="navigate('teams/join')">Join Team</a>
+		</li>
 		
-		<router-outlet></router-outlet>
+		
 	</ul>
-	
+	<router-outlet></router-outlet>
 </div>
