added leave team functionality in your teams page

--- a/CST438-project/CST439-project/src/app/components/team-list/team-list.component.html
+++ b/CST438-project/CST439-project/src/app/components/team-list/team-list.component.html
@@ -18,7 +18,8 @@
 				</ol>
 				
 			</div>
-		
+			<button (click)="removeUserFromTeam(team.id)">Leave Team</button>
+			
 		</div>
 	</div>
 </div>
