--- a/frontend/src/app/components/teams-home/teams-home.component.html
+++ b/frontend/src/app/components/teams-home/teams-home.component.html
@@ -1,5 +1,5 @@
 <div id="container">
-	
+
 	<ul>
 		<li>
 			<a (click)="navigate('map')" >Map</a>
@@ -16,8 +16,11 @@
 		<li>
 			<a (click)="navigate('teams/join')">Join Team</a>
 		</li>
-		
-		
+    <li>
+      <a (click)="navigate('teams/match')">Find Match</a>
+    </li>
+
+
 	</ul>
 	<router-outlet></router-outlet>
 </div>
