--- a/frontend/src/app/components/team-match/team-match.component.css
+++ b/frontend/src/app/components/team-match/team-match.component.css
@@ -5,6 +5,11 @@
   position: absolute;
   left: 0px;
   top: 70px;
+  margin: 0 auto;
+}
+#row {
+  border: 1px solid black;
+  margin: 0 auto;
 }
 
 #distanceInput {
