Updated the appbar to use angular components. Should prevent title from goofing in the background

--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,6 +1,9 @@
 
-<div id="container">
-  <div>
+<div class="containerX" id="container">
+  <div
+    class="container"
+    fxLayout="column"
+    fxFlex="1 1 50%">
     <mat-form-field>
       <mat-label>Email</mat-label>
       <input required matInput [formControl]="email">
