--- a/frontend/src/app/components/app/app.component.css
+++ b/frontend/src/app/components/app/app.component.css
@@ -1,3 +1,11 @@
 agm-map {
-	height: 300px;
+  height: 300px;
+}
+:host{
+  display:flex;
+  flex-direction: column;
+  height: 100%;
+}
+router-outlet{
+  height: 0px;
 }
