--- a/frontend/src/app/components/chat/chat.component.css
+++ b/frontend/src/app/components/chat/chat.component.css
@@ -1,4 +1,4 @@
-#chat {
+/*#chat {
 	position: absolute;
 	width: 100%;
 	height: 20%;
@@ -6,5 +6,8 @@
 	bottom: 0px;
 	left: 0px;
 	background-color: orange;
-	
+
+}*/
+.chat-container{
+  backgroud-color: orange;
 }
