--- a/frontend/src/app/components/map/map.component.css
+++ b/frontend/src/app/components/map/map.component.css
@@ -1,10 +1,15 @@
+:host{
+  display: flex;
+  flex-direction: row;
+  flex: 1 1 auto;
+}
+/*
 #mapContainer {
-	width: 100%;
-	height:75%;
+  display: flex;
+  flex: 1 0 auto;
+  flex-direction: row;
 	background-color: #f4f5f7;
-	position: absolute;
-	left: 0px;
-	top: 70px;
+
 
 }
 
@@ -74,3 +79,4 @@ li a {
 li a:hover {
     background-color: #111;
 }
+*/
