--- a/frontend/src/app/components/map/map.component.html
+++ b/frontend/src/app/components/map/map.component.html
@@ -1,8 +1,7 @@
-<div id="mapContainer">
 
-	<div id="menu">
-	
-		<ul>
+	<div id="menu" fxFlex="30%" fxFlexFill fxLayout="column" style="min-height: 100%">
+
+		<ul fxFlex>
 			<li>
 				<a (click)="navigate('map')" >Search</a>
 			</li>
@@ -13,16 +12,16 @@
 				<a (click)="navigate('teams')">Teams</a>
 			</li>
 		</ul>
-		
-		<div id="searchContainer">
-		Search: <input id="locationInput" 
-			   placeholder="Enter location" 
-			   type="text" 
+
+		<div id="searchContainer" fxFlex>
+		Search: <input id="locationInput"
+			   placeholder="Enter location"
+			   type="text"
 			   name="locationSearch"
 			   class="form-control"
 			   #search [formControl]="searchControl"
 			   >
-			   
+
 			 <div *ngIf="showFilter == true">
 			 	Filter by sport:
 			 	<form action="" >
@@ -35,30 +34,30 @@
 			 </div>
 		<router-outlet ></router-outlet>
 		</div>
-		
-	</div>
-	
 
-	<div id="map">
+	</div>
+
+
+	<div id="map" fxFlex="1 0 auto" #mapElem>
 		<agm-map  id="mapObj"
-				  [mapTypeId]="map.mapTypeId" 
-				  [latitude]="lat" 
-				  [longitude]="lng" 
+				  [mapTypeId]="map.mapTypeId"
+				  [latitude]="lat"
+				  [longitude]="lng"
 				  [zoom]="zoom"
 				  (mapClick)="click($event)"
-				  [styles]="map.styles"
+              [style.height.px]="mapElem.offsetHeight"
 				  (centerChange)="centerChanged($event)"
 				  (mapReady)="mapReady($event)" >
-				  
-			<agm-marker [latitude]="homeCoords.lat" 
+
+			<agm-marker [latitude]="homeCoords.lat"
 						[longitude]="homeCoords.lng"
 						[markerDraggable]="false">
   				<agm-info-window [isOpen]="true">Your Location</agm-info-window>
 			</agm-marker>
-			
+
 			<div *ngIf="dataLoaded == true">
   			<agm-marker  *ngFor="let marker of mapService.getLocations()"
-  				
+
   				[latitude]= "marker.coords.lat"
   				[longitude]="marker.coords.lng"
   				[visible]="true"
@@ -78,7 +77,7 @@
   					<div *ngIf="userService.isLoggedIn() == true">
   						<button  (click)="mapService.addUserToEvent(marker.id)">Join</button>
   					</div>
-  					
+
   			    </agm-info-window>
   			</agm-marker>
   			</div>
@@ -89,7 +88,7 @@
   				[title]="searchMarker.text"
   				[visible]="searchMarker.isOpen"
   				(dragEnd)="searchWasDragged($event)" >
-  				
+
   				<agm-info-window  [isOpen]="searchMarker.isOpen">
   					{{searchMarker.text}}
   				</agm-info-window>
@@ -97,4 +96,4 @@
 		</agm-map>
 	</div>
 
-</div>
+
