--- a/frontend/src/app/components/map/map.component.css
+++ b/frontend/src/app/components/map/map.component.css
@@ -3,6 +3,17 @@
   flex-direction: row;
   flex: 1 1 auto;
 }
+#menu{
+  margin:8px;
+}
+
+.search-menu{
+  margin: 8px;
+}
+.card-3 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
 /*
 #mapContainer {
   display: flex;
