--- a/frontend/src/app/components/map/map.component.html
+++ b/frontend/src/app/components/map/map.component.html
@@ -1,5 +1,5 @@
 
-	<div id="menu" fxFlex="30%" fxFlexFill fxLayout="column" style="min-height: 100%">
+	<div id="menu" class='search-menu card-3' fxFlex="30%"  fxLayout="column">
     <mat-toolbar>
       <button mat-button (click)="navigate('map')" >Search</button>
       <button mat-button (click)="navigate('map/locations')">Locations</button>
