--- a/frontend/src/app/components/chat/chat.component.css
+++ b/frontend/src/app/components/chat/chat.component.css
@@ -8,6 +8,16 @@
 	background-color: orange;
 
 }*/
+:host{
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  height: 100%
+}
 .chat-container{
   backgroud-color: orange;
 }
+.card-3 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
