--- a/frontend/src/app/components/chat/chat.component.html
+++ b/frontend/src/app/components/chat/chat.component.html
@@ -1,3 +1,3 @@
-<div class="chat-container" fxFlex="1 1 auto">
-	<span>chat</span>
+<div class="chat-container card-3" fxFlex="1 1 auto" fxLayout="row" style="margin: 8px; padding:8px" >
+	<div fxFlex="1">chat</div>
 </div>
