fixed orangeness in chat

--- a/frontend/src/app/components/chat/chat.component.css
+++ b/frontend/src/app/components/chat/chat.component.css
@@ -15,7 +15,7 @@
   height: 100%
 }
 .chat-container{
-  backgroud-color: orange;
+  background-color: orange;
 }
 .card-3 {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
