--- a/frontend/src/app/components/chat/chat.component.css
+++ b/frontend/src/app/components/chat/chat.component.css
@@ -5,6 +5,32 @@
 	max-height: 30%;
 	bottom: 0px;
 	left: 0px;
-	background-color: orange;
-	
+
+
+}
+
+#newMessage {
+  background-color: grey;
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+}
+
+#submitButton {
+  float: right;
+  height: 50px;
+  width: 10%;
+}
+
+#message {
+
+  text-align: left;
+  width: 100%;
+}
+
+#msgInput {
+  float: left;
+  height: 50px;
+  width: 85%;
 }
