--- a/frontend/src/app/components/app/app.component.html
+++ b/frontend/src/app/components/app/app.component.html
@@ -10,3 +10,25 @@
   </div>
 </div>
 
+<div class="container">
+  <div class="jumbotron">
+    <h1>Sport Challenge</h1>
+    <img src="../../../images/football.png" alt="Mountain View">
+  </div>
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      Login
+    </div>
+
+    <div>
+      <form action="">
+        Username: <input type="text" name="user" placeholder="username"><br>
+        Password: <input type="password" name="password" placeholder="password">
+      </form>
+      <button>Login</button>
+      <button>Register</button>
+    </div>
+  </div>
+
+</div>
+
