--- a/frontend/src/app/components/team-match/team-match.component.css
+++ b/frontend/src/app/components/team-match/team-match.component.css
@@ -1,12 +1,14 @@
 #container {
   width: 100%;
-  height:75%;
+  height:105%;
   background-color: #f4f5f7;
   position: absolute;
   left: 0px;
   top: 70px;
   margin: 0 auto;
+  overflow: scroll;
 }
+
 #row {
   border: 1px solid black;
   margin: 0 auto;
@@ -18,4 +20,22 @@
 
 table, th, td {
   border: 1px solid black;
+}
+
+app-map {
+	height: 500px;
+	width: 70%;
+	float: left;
+}
+
+app-location {
+	height: 500px;
+	width: 30%;
+	float: right;
+}
+
+agm-map {
+	height: 300px;
+	width: 50%;
+	
 }
