--- a/frontend/src/app/components/chat/chat.component.css
+++ b/frontend/src/app/components/chat/chat.component.css
@@ -1,9 +1,18 @@
+#chat {
+	position: absolute;
+	width: 100%;
+	height: 20%;
+	max-height: 30%;
+	bottom: 0px;
+	left: 0px;
 
+
+}
 
 #newMessage {
   background-color: grey;
   width: 100%;
-  height: 25%;
+  height: 50px;
   position: absolute;
   bottom: 0;
 }
@@ -15,7 +24,7 @@
 }
 
 #message {
-  height: 10%;
+
   text-align: left;
   width: 100%;
 }
@@ -23,28 +32,5 @@
 #msgInput {
   float: left;
   height: 50px;
-  width: 89%;
-}
-
-:host{
-  display: flex;
-  flex-direction: row;
-  flex: 1;
-  height: 100%
-}
-.chat-container{
-  position: absolute;
-  bottom: 0;
-  height: 20%;
-  width: 100%;
-  background-color: #e3e4e5;
-}
-.card-3 {
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
-
-#chat {
-	height: 75%;
-	width: 100%;
-	overflow-y: auto;
+  width: 85%;
 }
