--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,3 +8,11 @@ body{
   margin:0;
   overflow: hidden;
 }
+.card-3 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+
+.space{
+  flex: 1 1 auto
+}
