--- a/frontend/src/app/components/chat/chat.component.html
+++ b/frontend/src/app/components/chat/chat.component.html
@@ -1,16 +1,16 @@
 <div class="card-3" fxLayout="column" fxFlex="100%">
-  <div fxFlex="90%">
-    <div *ngFor="let message of this.messages">
+  <div id="chat" fxFlex="90%" style="padding: 8px">
+    <div  *ngFor="let message of this.messages">
       <div id="message">
         [{{message.time}}] {{message.username}}:{{message.message}}
       </div>
     </div>
   </div>
-  <mat-divider [inset]="true"></mat-divider>
+  <mat-divider></mat-divider>
   <div fxFlex="1 1 auto" fxLayout="row">
-
-    <input [(ngModel)]="newMessage" id="msgInput" type="text"/>
-    <span class="space"></span>
-    <button mat-button (click)="submitMessage()" id="submitButton">Enter</button>
+    <mat-form-field fxFlex="1 1 90%" fxLayout="column" style="padding-left: 8px" >
+      <input style="width: 100%" matInput (keyup.enter)="submitMessage()" [formControl]="newMessage" type="text"/>
+    </mat-form-field>
+    <button mat-button fxFlex="1 1 auto" (click)="submitMessage()" id="submitButton">Enter</button>
   </div>
 </div>
