--- a/frontend/src/app/components/app/app.component.html
+++ b/frontend/src/app/components/app/app.component.html
@@ -5,7 +5,7 @@
   <div fxFlex="1 1 auto" fxLayout="row">
     <router-outlet style="height: 0px"></router-outlet>
   </div>
-  <div fxFlex="1 1 25%" fxLayout="row">
+  <div fxFlex="0 0 25vh" fxLayout="row" >
     <app-chat fxFlex="100%" fxLayout="row"></app-chat>
   </div>
 </div>
